--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <style>
         :root { --gold: #fbbf24; --bg: #0f172a; }
         body { font-family: sans-serif; background: var(--bg); color: white; padding: 20px; display: flex; justify-content: center; }
-        .card { width: 100%; max-width: 400px; background: #1e293b; padding: 20px; border-radius: 20px; text-align: center; }
-        #view { width: 100%; height: 250px; background: #000; border-radius: 15px; margin-bottom: 20px; display: flex; align-items: center; justify-content: center; overflow: hidden; }
+        .card { width: 100%; max-width: 400px; background: #1e293b; padding: 20px; border-radius: 20px; text-align: center; box-shadow: 0 10px 30px rgba(0,0,0,0.5); }
+        #view { width: 100%; height: 250px; background: #000; border-radius: 15px; margin-bottom: 20px; display: flex; align-items: center; justify-content: center; overflow: hidden; border: 2px dashed #475569; }
         img { max-width: 100%; max-height: 100%; display: none; }
-        .btn { background: var(--gold); color: #000; padding: 15px; border: none; border-radius: 10px; font-weight: bold; width: 100%; cursor: pointer; margin-bottom: 10px; }
-        #res { margin-top: 20px; padding: 15px; background: #0f172a; border-radius: 10px; display: none; text-align: left; border-left: 4px solid var(--gold); }
+        .btn { background: var(--gold); color: #000; padding: 15px; border: none; border-radius: 10px; font-weight: bold; width: 100%; cursor: pointer; margin-bottom: 10px; font-size: 1rem; }
+        #res { margin-top: 20px; padding: 15px; background: #0f172a; border-radius: 10px; display: none; text-align: left; border-left: 5px solid var(--gold); }
+        .loading { display: none; color: var(--gold); margin: 10px 0; font-weight: bold; }
     </style>
 </head>
 <body>
@@ -21,83 +22,86 @@
     <p style="font-size:0.8rem; color:#94a3b8; margin-bottom:20px;">Diagnosis Busi SMKN 1 Sumarorong</p>
 
     <div id="view">
-        <span id="txt">Foto Busi</span>
-        <img id="img" src="">
+        <span id="txt">Belum Ada Foto</span>
+        <img id="img-preview" src="">
     </div>
 
-    <input type="file" id="file" accept="image/*" capture="camera" style="display:none">
-    <button class="btn" onclick="document.getElementById('file').click()">AMBIL FOTO</button>
-    <button id="go" class="btn" style="background:#2563eb; color:#fff; display:none" onclick="scan()">MULAI ANALISIS</button>
+    <input type="file" id="file-input" accept="image/*" capture="camera" style="display:none">
+    <button class="btn" onclick="document.getElementById('file-input').click()">AMBIL FOTO BUSI</button>
+    <button id="btn-scan" class="btn" style="background:#2563eb; color:#fff; display:none" onclick="startAnalysis()">MULAI ANALISIS AI</button>
 
-    <div id="load" style="display:none; color:var(--gold);">Sedang berpikir...</div>
+    <div id="loading" class="loading">⚡ AI Sedang Menganalisis...</div>
+
     <div id="res">
-        <strong>HASIL:</strong>
-        <p id="out" style="font-size:0.9rem;"></p>
+        <strong style="color:var(--gold)">HASIL DIAGNOSA:</strong>
+        <p id="out-text" style="font-size:0.95rem; line-height:1.5; margin-top:10px;"></p>
     </div>
 </div>
 
 <script>
-    // Kunci Anda dari gambar
-    const KEY = "AIzaSyDcqCfYvtp2D7Y-LLYr9kTAElIOy0K_2JI"; 
+    // API Key Anda
+    const API_KEY = "AIzaSyDcqCfYvtp2D7Y-LLYr9kTAElIOy0K_2JI"; 
     
-    const fileInp = document.getElementById('file');
-    const preview = document.getElementById('img');
-    const btnGo = document.getElementById('go');
+    const fileInp = document.getElementById('file-input');
+    const preview = document.getElementById('img-preview');
+    const btnScan = document.getElementById('btn-scan');
+    const placeholder = document.getElementById('txt');
 
     fileInp.onchange = (e) => {
-        const f = e.target.files[0];
-        if(f) {
-            const r = new FileReader();
-            r.onload = (ev) => {
+        const file = e.target.files[0];
+        if(file) {
+            const reader = new FileReader();
+            reader.onload = (ev) => {
                 preview.src = ev.target.result;
                 preview.style.display = 'block';
-                document.getElementById('txt').style.display = 'none';
-                btnGo.style.display = 'block';
+                placeholder.style.display = 'none';
+                btnScan.style.display = 'block';
+                document.getElementById('res').style.display = 'none';
             };
-            r.readAsDataURL(f);
+            reader.readAsDataURL(file);
         }
     };
 
-    async function scan() {
-        const load = document.getElementById('load');
-        const out = document.getElementById('out');
-        const box = document.getElementById('res');
+    async function startAnalysis() {
+        const loading = document.getElementById('loading');
+        const out = document.getElementById('out-text');
+        const resBox = document.getElementById('res');
         
-        load.style.display = 'block';
-        btnGo.style.display = 'none';
-        box.style.display = 'none';
+        loading.style.display = 'block';
+        btnScan.style.display = 'none';
 
-        const base64 = preview.src.split(',')[1];
+        // Mengambil data base64 dari gambar
+        const base64Data = preview.src.split(',')[1];
 
-        // Format body diperbaiki agar lebih kompatibel
-        const body = {
+        const payload = {
             contents: [{
                 parts: [
-                    { text: "Analisis kondisi busi ini untuk mekanik SMK. Berikan diagnosa warna dan kondisi mesin." },
-                    { inline_data: { mime_type: "image/jpeg", data: base64 } }
+                    { text: "Analisis foto busi ini untuk teknisi SMK. Sebutkan warna insulator, kondisi pembakaran mesin, dan saran perbaikan singkat." },
+                    { inline_data: { mime_type: "image/jpeg", data: base64Data } }
                 ]
             }]
         };
 
         try {
-            const response = await fetch("https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key=" + KEY, {
+            // Menggunakan model Gemini 1.5 Flash yang lebih stabil untuk analisis gambar
+            const response = await fetch("https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key=" + API_KEY, {
                 method: "POST",
                 headers: { "Content-Type": "application/json" },
-                body: JSON.stringify(body)
+                body: JSON.stringify(payload)
             });
 
-            const data = await response.json();
+            const result = await response.json();
 
-            if (data.error) {
-                out.innerText = "Error dari Google: " + data.error.message;
+            if (result.error) {
+                out.innerText = "Error: " + result.error.message;
             } else {
-                out.innerText = data.candidates[0].content.parts[0].text;
+                out.innerText = result.candidates[0].content.parts[0].text;
             }
         } catch (err) {
-            out.innerText = "Koneksi gagal. Periksa internet Anda.";
+            out.innerText = "Koneksi gagal atau API bermasalah. Pastikan internet stabil.";
         } finally {
-            load.style.display = 'none';
-            box.style.display = 'block';
+            loading.style.display = 'none';
+            resBox.style.display = 'block';
         }
     }
 </script>
